# qos

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .lfsconfig  AGENTS.md  CHANGELOG.MD  CHANGELOG.md  Cargo.toml  Containerfile.qemu  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  attest_document  attest_document.rs  renovate.json  rust-toolchain.toml  rustfmt.toml  tools.mk  upload-stagex-ghcr.sh
integration/: Cargo.toml
integration/tests/: app.rs  boot.rs  coordinator.rs  dev_boot.rs  genesis.rs
qos-client/: Cargo.toml
qos-client/src/: attest.rs  attestation.rs  cli.rs  lib.rs  main.rs
qos-client/src/attest/: mod.rs
qos-client/src/cli/: mod.rs  services.rs
qos-core/: Cargo.toml
qos-core/src/: cli.rs  client.rs  coordinator.rs  handles.rs  hex.rs  lib.rs  parser.rs  protocol.rs  server.rs
qos-core/src/io/: mod.rs  stream.rs  threadpool.rs
qos-core/src/protocol/: attest_document  attestor.rs  boot.rs  genesis.rs  mod.rs  msg.rs  nitro_types.rs  provisioner.rs
qos-host/: Cargo.toml
qos-host/src/: cli.rs  lib.rs  main.rs
qos-test/: Cargo.toml  coordinator_keeps_re_spawning_pivot_executable_that_panics.secret  qos.pivot
qos-test/boot-e2e-boot-dir-tmp/: quit-coding-to-vape.2.manifest  user1.quit-coding-to-vape.2.approval  user2.quit-coding-to-vape.2.approval  user3.quit-coding-to-vape.2.approval
qos-test/genesis-e2e-genesis-tmp/: output.genesis  user1.quit-coding-to-vape.setup.pub
qos-test/genesis-e2e-personal-tmp/user1-dir/: user1.quit-coding-to-vape.personal.key  user1.quit-coding-to-vape.personal.pub  user1.quit-coding-to-vape.setup.key  user1.quit-coding-to-vape.share
qos-test/genesis-e2e-personal-tmp/user2-dir/: user2.quit-coding-to-vape.personal.key  user2.quit-coding-to-vape.personal.pub  user2.quit-coding-to-vape.setup.key  user2.quit-coding-to-vape.setup.pub  user2.quit-coding-to-vape.share
qos-test/genesis-e2e-personal-tmp/user3-dir/: user3.quit-coding-to-vape.personal.key  user3.quit-coding-to-vape.personal.pub  user3.quit-coding-to-vape.setup.key  user3.quit-coding-to-vape.setup.pub  user3.quit-coding-to-vape.share
qos-test/genesis-out-tmp/: output.genesis
qos-test/sample-app-e2e-tmp/: manifest.manifest
qos-test/src/: lib.rs
qos-test/tests/: app.rs  boot.rs  client_server.rs  coordinator.rs  dev_boot.rs  end_to_end.rs  genesis.rs  load.rs  load_e2e.rs  provision.rs  provision_e2e.rs  verification.rs
src/: .dockerignore  Cargo.toml  Makefile  README.md  client.rs  enclave.rs  lib.rs  macros.mk  main.rs  protocol.rs  protocol_helpers.rs  release-plz.toml  rust-toolchain.toml  rustfmt.toml  server.rs  utils.rs
src/attestation/: Cargo.toml
src/attestation/src/: lib.rs
src/aws/src/: lib.rs
src/benchmarking/: Cargo.toml
src/benchmarking/src/: main.rs  maloc.rs
src/codegen/: Cargo.toml
src/codegen/src/: main.rs
src/eif_build/: Cargo.toml  eif_build.rs
src/health_check/: Cargo.toml
src/health_check/src/: lib.rs
src/images/: Containerfile
src/images/benchmarking/: Containerfile
src/images/client/: Dockerfile
src/images/common/: Containerfile
src/images/core/: Dockerfile
src/images/enclave/: Dockerfile
src/images/enclave_reshard/: Containerfile  nitro.pcrs
src/images/host/: Dockerfile
src/images/qemu/: Containerfile
src/images/qos_bridge/: Containerfile  enclave_egress_interfaces.sh  entrypoint.sh
src/images/qos_bridge_egress/: Containerfile
src/images/qos_client/: Containerfile
src/images/qos_enclave/: Containerfile
src/images/qos_enclave_egress/: Containerfile
src/images/qos_host/: Containerfile
src/images/reshard_app/: Containerfile
src/images/reshard_host/: Containerfile
src/images/sample-app/: Dockerfile
src/images/signed_echo/: Containerfile
src/init/: Cargo.toml  README.md  init.rs  setip.rs
src/init/qos_hex/: Cargo.toml
src/init/qos_test_primitives/: Cargo.toml
src/init/sample_app/: Cargo.toml
src/integration/: Cargo.toml  pivot_ok2_works  pivot_ok3_works
src/integration/examples/: boot_enclave.rs  pivot_download.rs
src/integration/mock/: ephemeral_seed.secret.keep  mock_p256_dr.pub  mock_p256_dr.secret.keep  pivot-build-fingerprints.txt  qos-build-fingerprints.txt
src/integration/src/: lib.rs
src/integration/tests/: app.rs  async_boot.rs  async_boot_hybrid.rs  async_client.rs  async_qos_host.rs  async_remote_tls.rs  boot.rs  borsh_serialize.rs  client.rs  coordinator.rs  dev-genesis.rs  dev_boot.rs  dev_quorum_key.rs  enclave_app_client_socket_stress.rs  enclave_app_client_timeout.rs  genesis.rs  host_bridge.rs  interleaving_socket_stress.rs  key.rs  preprod-genesis.rs  preprod_sharding.rs  proofs.rs  protocol_legacy_decode.rs  qos_bridge.rs  qos_host.rs  qos_host_bridge.rs  reaper.rs  remote_http.rs  remote_tls.rs  reshard.rs  simple_socket_stress.rs  version.rs
src/integration/wasm_policy/: Cargo.toml
src/integration/wasm_program/: Cargo.toml
src/integration/wasm_rt/: Cargo.toml
src/integration/wasm_sdk/: Cargo.toml
src/integration/wasm_sdk_macros/: Cargo.toml
src/io/: mod.rs  raw_fd.rs  stream.rs  stream_endpoint.rs  vsock.rs
src/make/: aws.mk  c.mk  fetch.mk  images.mk  init.mk  kernel.mk  keys.mk  rootfs.mk  rust.mk
src/metrics/: Cargo.toml
src/qos_attest/: Cargo.toml
src/qos_aws/: Cargo.toml
src/qos_bridge/: Cargo.toml  README.md
src/qos_bytes/: Cargo.toml
src/qos_client/: Cargo.toml  RESHARD_GUIDE.md  build.rs
src/qos_clock/: Cargo.toml
src/qos_core/: Cargo.toml  KEY_FORWARDING.MD  build.rs
src/qos_crypto/: Cargo.toml
src/qos_enclave/: Cargo.toml
src/qos_hex/: Cargo.toml
src/qos_host/: Cargo.toml
src/qos_host_primitives/: Cargo.toml
src/qos_json/: Cargo.toml  SPEC.md
src/qos_net/: Cargo.toml  README.MD
src/qos_nsm/: Cargo.toml  README.md
src/qos_p256/: Cargo.toml  SPEC.md
src/qos_proto/: Cargo.toml  README.md
src/qos_system/: Cargo.toml
src/qos_test_harness/: Cargo.toml
src/qos_test_primitives/: Cargo.toml
src/scripts/: enclave_egress_interfaces.sh  extract_oci_file.sh
src/signed_echo/: Cargo.toml  README.md
src/toolchain/: Dockerfile
src/xtask/: Cargo.toml
(+749 files in other folders)
