[workspace]
members = [
  "qos-attest",
  "qos-client",
  "qos-core",
  "qos-crypto",
  "qos-host",
  "qos-test",
  "qos-hex",
  "sample-app",
]
# We need this to avoid issues with the mock feature uinintentionally being
# enabled just because some tests need it.
# https://nickb.dev/blog/cargo-workspace-and-the-feature-unification-pitfall/
resolver = "2"
