[package]
name = "qos-client"
version = "0.1.0"
edition = "2021"

[dependencies]
qos-core = { path = "../qos-core" }
qos-host = { path = "../qos-host" }
qos-crypto = { path = "../qos-crypto" }

# Third party
ureq = { version = "2.4", default-features = false }
aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
openssl = "0.10.40"
borsh = { version = "0.9" }

# For handling Attestation Doc
aws-nitro-enclaves-cose = { version = "0.4.0", default-features = false, features = ["key_openssl_pkey"] }
webpki = { version =  "0.22.0", default-features = false }
serde_bytes = { version = "0.11", default-features = false }
