[package]
name = "qos-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qos-core = { path = "../qos-core" }
axum = { version = "0.5.4", features = ["http1"], default-features = false }
tokio = { version = "1.18", features = ["full"], default-features = false }