[workspace]
members = [
  "codegen",
  "generated",
  "integration",
  "qos_client",
  "qos_core",
  "qos_crypto",
  "qos_host",
  "qos_hex",
  "qos_net",
  "qos_test_primitives",
  "qos_p256",
  "qos_nsm",
  "qos_reshard/app",
  "qos_reshard/host",
]
exclude = [
  "init",
  "qos_aws",
  "qos_system",
  "qos_enclave",
  "qos_p256/fuzz",
  "qos_crypto/fuzz",
  "qos_nsm/fuzz",
]
# We need this to avoid issues with the mock feature uinintentionally being
# enabled just because some tests need it.
# https://nickb.dev/blog/cargo-workspace-and-the-feature-unification-pitfall/
resolver = "2"
