[workspace]
members = [
  "integration",
  "qos_client",
  "qos_core",
  "qos_crypto",
  "qos_host",
  "qos_hex",
  "qos_net",
  "qos_test_primitives",
  "qos_p256",
  "qos_nsm",
]
exclude = [
  "init",
  "qos_aws",
  "qos_system",
  "qos_enclave",
  "qos_p256/fuzz",
  "qos_crypto/fuzz",
  "qos_nsm/fuzz",
]
# We need this to avoid issues with the mock feature uinintentionally being
# enabled just because some tests need it.
# https://nickb.dev/blog/cargo-workspace-and-the-feature-unification-pitfall/
resolver = "2"

[workspace.dependencies]
# External dependencies
aes-gcm = { version = "0.10.3", features = ["aes", "alloc"], default-features = false }
aws-nitro-enclaves-cose = { version = "0.5", default-features = false }
aws-nitro-enclaves-nsm-api = { version = "0.4", default-features = false }
axum = { version = "0.6.20", features = ["http1", "tokio", "json"], default-features = false }
borsh = { version = "1.0", features = ["std", "derive"], default-features = false }
chunked_transfer = { version = "1.5.0", default-features = false }
hex-literal = "0.4.0"
hickory-resolver = { version = "0.25.2", features = ["tokio", "dnssec-ring"], default-features = false }
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12", default-features = false }
httparse = { version = "1.9.4", default-features = false }
lazy_static = "1.4"
libc = "=0.2.172"
nix = { version = "0.26", features = ["socket"], default-features = false }
p256 = { version = "0.12.0", default-features = false }
p384 = { version = "0.13", features = ["ecdsa", "std"], default-features = false }
rand = "0.9"
rand_core = { version = "0.9", default-features = false, features = ["os_rng"] }
rpassword = { version = "7", default-features = false }
rustls = { version = "0.23.5" }
serde = { version = "1", features = ["derive"], default-features = false }
serde_bytes = { version = "0.11", default-features = false }
serde_json = { version = "1" }
sha2 = { version = "0.10", default-features = false }
thiserror = { version = "2.0.12", features = ["std"], default-features = false }
tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread"], default-features = false }
ureq = { version = "2.9", default-features = false }
vsss-rs = { version = "5.1", default-features = false, features = ["std", "zeroize"] }
webpki = { version = "0.22.4", default-features = false }
webpki-roots = { version = "1.0.2" }
x509 = { version = "0.2", default-features = false }
x509-cert = { version = "0.2.5", features = ["pem"], default-features = false }
yubikey = { version = "0.7", features = ["untested"], default-features = false }
zeroize = { version = "1.6", default-features = false }

# Internal workspace dependencies
integration = { path = "integration" }
generate  = { path = "generated" }
reshard_app = { path = "reshard_app" }
qos_client = { path = "qos_client", default-features = false }
qos_core = { path = "qos_core", default-features = false }
qos_crypto = { path = "qos_crypto", default-features = false }
qos_hex = { path = "qos_hex", default-features = false }
qos_host = { path = "qos_host", default-features = false }
qos_net = { path = "qos_net", default-features = false }
qos_nsm = { path = "qos_nsm", default-features = false }
qos_p256 = { path = "qos_p256" }
qos_test_primitives = { path = "qos_test_primitives" }
