[package]
name = "benchmarking"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "sync", "time"], default-features = false }
reqwest = { version = "0.11", features = ["json", "stream", "time"] }
criterion = "0.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
