[package]
name = "eif_build"
version = "0.1.0"

[dependencies]
sha2 = "0.9.5"
serde = { version = ">=1.0.160", features = ["derive"] }
serde_json = "1.0"
num-traits = "0.2"
num-derive = "0.3"
byteorder = "1.3"
clap = "2.33"
hex = "0.4"
crc = "1.8"
openssl = "0.10"
serde_cbor = "0.11"
chrono = "0.4"
aws-nitro-enclaves-cose = "0.5"
aws-nitro-enclaves-image-format = "0.2.0"

[[bin]]
name = "eif_build"
path = "eif_build.rs"
