[package]
name = "health_check"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
qos_core = { path = "../qos_core" }
qos_crypto = { path = "../qos_crypto" }
generated = { path = "../generated", features = ["tonic_types"] }
qos_host_primitives = { path = "../qos_host_primitives", default-features = false }

tokio = { version = "1.0", features = [
  "macros",
  "rt-multi-thread",
], default-features = false }
tokio-stream = { version = "0.1", default-features = false }
borsh = { version = "1.0", features = [
  "std",
  "derive",
], default-features = false }
