[package]
name = "integration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

# Override workspace lints for this test crate
[lints.rust]
missing_docs = "allow"
unsafe_code = "deny"

[lints.clippy]
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[features]
legacy-protocol-compat = []

[dependencies]
qos_core = { workspace = true, features = ["mock"], default-features = false }
qos_nsm = { workspace = true, features = ["mock"], default-features = false }
qos_host = { workspace = true, default-features = false }
qos_net = { workspace = true, features = ["proxy" ], default-features = false }
qos_crypto = { workspace = true }
qos_hex = { workspace = true }
qos_p256 = { workspace = true, features = ["mock"] }
qos_test_primitives = { workspace = true }
zeroize = { workspace = true }

futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
borsh = { workspace = true }
nix = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true }
webpki-roots = { workspace = true }
tokio-rustls = { workspace = true }

[dev-dependencies]
rand = { workspace = true, features = ["thread_rng"] }
ureq = { workspace = true, features = ["json"] }
qos_core_legacy = { package = "qos_core", version = "0.7", default-features = false }
# src/bin/pivot_download.rs to test egress
sha2 = { workspace = true }
url = { workspace = true }
