[package]
name = "qos_attest"
version = "0.1.0"
edition = "2021"

[dependencies]
qos_nsm = { path = "../qos_nsm", default-features = false }
qos_hex = { path = "../qos_hex" }

aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
aws-nitro-enclaves-cose = { version = "0.5", default-features = false }
sha2 = { version = "0.10", default-features = false }
webpki = { version =  "0.22.0", default-features = false }
serde_bytes = { version = "0.11", default-features = false }
p384 = { version = "0.11", features = ["sha384", "ecdsa", "ecdsa-core", "std"], default-features = false }
x509-cert = { version = "0.1", features = ["pem"], default-features = false }

[dev-dependencies]
hex-literal = "0.3"
rand = "0.8"
qos_core = { path = "../qos_core", features = ["mock"] }
