[package]
name = "qos_client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
qos_core = { path = "../qos_core", default-features = false }
qos_crypto = { path = "../qos_crypto", default-features = false }
qos_hex = { path = "../qos_hex" }
qos_p256 = { path = "../qos_p256" }
qos_nsm = { path = "../qos_nsm", default-features = false }

# Third party
ureq = { version = "2.9", default-features = false }
aws-nitro-enclaves-nsm-api = { version = "0.4", default-features = false }
borsh = { version = "1.0", features = ["std", "derive"] , default-features = false}
p256 = { version = "0.12.0", default-features = false }
rand_core = { version = "0.9", features = ["os_rng"], default-features = false }
zeroize = { version = "1.6", default-features = false }
rpassword = { version = "7", default-features = false }
serde_json = { version = "1" }

x509 = { version = "0.2", default-features = false, optional = true }
# As of 7/2025, upgrading this to 0.8.0 is blocked due to dependency conflicts
yubikey = { version = "0.7", features = ["untested"], default-features = false, optional = true }

[dev-dependencies]
# We need mock enabled to grab things related to the mock NSM.
qos_core = { path = "../qos_core", features = ["mock"], default-features = false }
lazy_static = "1.4"
qos_test_primitives = { path = "../qos_test_primitives" }
qos_p256 = { path = "../qos_p256", features = ["mock"] }

[features]
default = ["smartcard"]
smartcard = ["x509", "yubikey"]

