[package]
name = "qos_client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
qos_core = { workspace = true, default-features = false }
qos_crypto = { workspace = true, default-features = false }
qos_hex = { workspace = true }
qos_p256 = { workspace = true }
qos_nsm = { workspace = true, default-features = false }

# Third party
ureq = { workspace = true }
aws-nitro-enclaves-nsm-api = { workspace = true }
borsh = { workspace = true }
p256 = { workspace = true }
rand_core = { workspace = true, features = ["os_rng"] }
zeroize = { workspace = true }
rpassword = { workspace = true }
serde_json = { workspace = true }

x509 = { workspace = true, optional = true }
# As of 7/2025, upgrading this to 0.8.0 is blocked due to dependency conflicts
yubikey = { workspace = true, optional = true }

[dev-dependencies]
# We need mock enabled to grab things related to the mock NSM.
qos_core = { workspace = true, features = ["mock"], default-features = false }
lazy_static = { workspace = true }
qos_test_primitives = { workspace = true }
qos_p256 = { workspace = true, features = ["mock"] }

[features]
default = ["smartcard"]
smartcard = ["x509", "yubikey"]

