[package]
name = "qos_core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
qos_crypto = { workspace = true }
qos_hex = { workspace = true, features = ["serde"] }
qos_p256 = { workspace = true }
qos_nsm = { workspace = true, default-features = false }

nix = { workspace = true }
libc = { workspace = true }
borsh = { workspace = true }

# For AWS Nitro
aws-nitro-enclaves-nsm-api = { workspace = true }

serde_bytes = { workspace = true }
serde = { workspace = true }

futures = { workspace = true }
tokio = { version = "1.38.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time", "signal"], default-features = false }
tokio-vsock = { version = "0.7.1" }

[dev-dependencies]
qos_test_primitives = { workspace = true }
qos_p256 = { workspace = true, features = ["mock"] }
qos_nsm = { workspace = true, features = ["mock"], default-features = false }
rustls = { workspace = true }
webpki-roots = { workspace = true }

[features]
# Support for VSOCK
vm = []
# Never use in production - support for mock NSM
mock = ["qos_nsm/mock"]

[[bin]]
name = "qos_core"
path = "src/main.rs"
